@@ -10,7 +10,8 @@ v 1.4.0 (unreleased)
   - added configurable application domain for command line use
   - added support for respecting the authenticated users locale.
   - added FOSUserBundle view overrides
-  - added to command to list or mail registered users.
+  - added command to list or mail registered users.
+  - added command to send registration confirmation reminders.
 
 v 1.3.0 (unreleased)
   - fixed an issue with executing migrations / fixtures even if none existed
